--- a/test.html
+++ b/test.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 <div class="md">
-<p><a href="http://www.youtube.com/watch?v=_aInQ4x_HYM" target="_blank" class=" imgScanned">http://www.youtube.com/watch?v=_aInQ4x_HYM</a></p>
+<p><a href="http://www.youtube.com/watch?v=_aInQ4x_HYM" target="_blank">http://www.youtube.com/watch?v=_aInQ4x_HYM</a></p>
 
-<p><a href="http://www.youtube.com/watch?v=%7C_aInQ4x_HYM" target="_blank" class=" imgScanned">http://www.youtube.com/watch?v=|_aInQ4x_HYM</a></p>
+<p><a href="http://www.youtube.com/watch?v=%7C_aInQ4x_HYM" target="_blank">http://www.youtube.com/watch?v=|_aInQ4x_HYM</a></p>
 
-<p><a href="http://www.youtube.com/watch?v=fail_aimHYM" target="_blank" class=" imgScanned">http://www.youtube.com/watch?v=fail_aimHYM</a></p>
+<p><a href="http://www.youtube.com/watch?v=fail_aimHYM" target="_blank">http://www.youtube.com/watch?v=fail_aimHYM</a></p>
 
-<p><a href="http://www.youtube.com/watch?h=sku8&amp;v=_aInQ4x_HYM&amp;id=3" target="_blank" class=" imgScanned">http://www.youtube.com/watch?h=sku8&amp;v=_aInQ4x_HYM&amp;id=3</a></p>
+<p><a href="http://www.youtube.com/watch?h=sku8&amp;v=_aInQ4x_HYM&amp;id=3" target="_blank">http://www.youtube.com/watch?h=sku8&amp;v=_aInQ4x_HYM&amp;id=3</a></p>
 
-<p><a href="http://www.youtube.com/watch?v=JRfuAukYTKg&amp;feature=branded" target="_blank" class=" imgScanned">http://www.youtube.com/watch?v=JRfuAukYTKg&amp;feature=branded</a></p>
+<p><a href="http://www.youtube.com/watch?v=JRfuAukYTKg&amp;feature=branded" target="_blank">http://www.youtube.com/watch?v=JRfuAukYTKg&amp;feature=branded</a></p>
 
-<p><a href="http://www.youtube.com/watch?v=W4gkUDHR7VU&feature=relmfu" target="_blank" class=" imgScanned">http://www.youtube.com/watch?v=W4gkUDHR7VU&feature=relmfu</a></p>
+<p><a href="http://www.youtube.com/watch?v=W4gkUDHR7VU&feature=relmfu" target="_blank">http://www.youtube.com/watch?v=W4gkUDHR7VU&feature=relmfu</a></p>
+
+<p><a href="http://www.youtu.be/_aInQ4x_HYM" target="_blank">http://www.youtu.be/_aInQ4x_HYM</a></p>
 </div>
 </body>
 </html>
