--- a/test.html
+++ b/test.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<script type="text/javascript" src="yt-hover/jquery.min.js"></script>
-<script type="text/javascript" src="yt-hover/jquery.hoverIntent.min.js"></script>
-<script type="text/javascript" src="yt-hover/jquery.livequery.min.js"></script>
-<script type="text/javascript" src="yt-hover/parseuri.js"></script>
-<script type="text/javascript" src="yt-hover/yt-hover.user.js"></script>
+<script type="text/javascript" src="link-preview/jquery.min.js"></script>
+<script type="text/javascript" src="link-preview/jquery.hoverIntent.min.js"></script>
+<script type="text/javascript" src="link-preview/jquery.livequery.min.js"></script>
+<script type="text/javascript" src="link-preview/parseuri.js"></script>
+<script type="text/javascript" src="link-preview/link-preview.user.js"></script>
+<script type="text/javascript" src="link-preview/youtube.js"></script>
 </head>
 <body>
 <div class="md">
